--- a/TeamIR_Sender/TestLirc/res/values/strings.xml
+++ b/TeamIR_Sender/TestLirc/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TestLirc</string>
+    <string name="app_name">TestLircTV</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
 
 </resources>
