Änderung der Startseit hinzufügen von TextView

--- a/Oberfläche/src/AirSwimmer/res/values/strings.xml
+++ b/Oberfläche/src/AirSwimmer/res/values/strings.xml
@@ -20,5 +20,8 @@
     <string name="title_activity_activity__buttons">Activity_Buttons</string>
     <string name="title_activity_activity__tilt">Activity_Tilt</string>
     <string name="title_activity_activity__wipe">Activity_Wipe</string>
-	<color  name="app_colour">#000080</color>
+    <string name="button_buttonb">TASTEN</string>
+    <string name="button_wischen">WISCHEN</string>
+    <string name="button_kippen">KIPPEN</string>
+	<color  name="app_colour">#33FFFF</color>
 </resources>
