--- a/Oberfläche/src/AirSwimmer/res/values/strings.xml
+++ b/Oberfläche/src/AirSwimmer/res/values/strings.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Front page -->
     <string name="app_name">AirSwimmer</string>
     <string name="action_settings">Settings</string>
+    <color  name="app_colour">#33FFFF</color>
+    <string name="button_buttonb">TASTEN</string>
+    <string name="button_wischen">WISCHEN</string>
+    <string name="button_kippen">KIPPEN</string>
+    
+    <!-- buttons fpr button_mode -->
     <string name="button_up">Up</string>
     <string name="button_down">Down</string>
     <string name="button_right">Right</string>
     <string name="button_left">Left</string>
-	<!-- submenu of select_mode -->
+    
+	<!-- submenu of select_mode -->	
  	<string name="mode_buttons">Tasten</string> 
  	<string name="mode_tilt">Kippen</string> 
  	<string name="mode_wipe">Wischen</string> 
+
  	<!-- start.xml menu -->
  	<string name="select_mode">Modus auswählen</string>
+ 	<string name="change_background">Hintergrund ändern</string>
+ 	<string name="change_move">Steuerungsart ändern</string>
+ 	
  	<!-- submenu of change-background -->
  	<string name="water_picture">Wasser</string> 
  	<string name="sky_picture">Himmel</string>
- 	<string name="change_background">Hintergrund ändern</string>
+ 	
+ 	<!-- submenu of change-mode -->
     <string name="title_activity_activity__buttons">Activity_Buttons</string>
     <string name="title_activity_activity__tilt">Activity_Tilt</string>
     <string name="title_activity_activity__wipe">Activity_Wipe</string>
-    <string name="button_buttonb">TASTEN</string>
-    <string name="button_wischen">WISCHEN</string>
-    <string name="button_kippen">KIPPEN</string>
-	<color  name="app_colour">#33FFFF</color>
+    
+    <!-- submenu of change-move -->
+    <string name="title_activity_activity__buttons_permanent">Activity_Buttons_Permanent</string>
+    <string name="title_activity_activity__wipe_permanent">Activity_Wipe_Permanent</string>
+	<string name="title_activity_activity__tilt_permanent">Activity_Tilt_Permanent</string>
+	<string name="single">Einfach</string>
+	<string name="permanent">Permanent</string>
 </resources>
