--- a/Oberfläche/src/AirSwimmer/res/values/strings.xml
+++ b/Oberfläche/src/AirSwimmer/res/values/strings.xml
@@ -46,7 +46,8 @@
 	<string name="change_layout_orientation">Ausrichtung ändern</string>
 	<string name="orientation_portrait">Aux-Anschluss an der kurzen Seite</string>
 	<string name="orientation_landscape">Aux-Anschluss an der langen Seite</string>
-	<string name="open_info_page">Info</string>	
+	<string name="open_info_page">Info</string>
+	<string name="open_sound_calc">Lautstärkeregelung</string>	
 	
   
 </resources>
