--- a/finaleApp/AirSwimmer/res/values/strings.xml
+++ b/finaleApp/AirSwimmer/res/values/strings.xml
@@ -45,7 +45,9 @@
 	<!-- start.xml menu -->
 	<string name="change_layout_orientation">Ausrichtung ändern</string>
 	<string name="orientation_portrait">Aux-Anschluss an der kurzen Seite</string>
-	<string name="orientation_landscape">Aux-Anschluss an der langen Seite</string>	
+	<string name="orientation_landscape">Aux-Anschluss an der langen Seite</string>
+	<string name="OKButton">OK</string>
+	<string name="sound_calc_string">Lautstärkeregulierung</string>	
 	
   
 </resources>
