--- a/finaleApp/AirSwimmer/res/values/strings.xml
+++ b/finaleApp/AirSwimmer/res/values/strings.xml
@@ -47,7 +47,8 @@
 	<string name="orientation_portrait">Aux-Anschluss an der kurzen Seite</string>
 	<string name="orientation_landscape">Aux-Anschluss an der langen Seite</string>
 	<string name="OKButton">OK</string>
-	<string name="sound_calc_string">Lautstärkeregulierung</string>	
+	<string name="sound_calc_string">Lautstärkeregulierung</string>
+	<string name="string_info_page">Info</string>	
 	
   
 </resources>
